--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -170,7 +170,7 @@ When matrix is sparse, a direct LU decomposition causes fill-in on factorization
 \label{chap:distributed_rbffd}
 
 
-Overlapping algorithm: \url{http://arxiv.org/pdf/1101.0091v1.pdf}
+%TODO: Similar Overlapping algorithm: \url{http://arxiv.org/pdf/1101.0091v1.pdf}
 
 Parallelizing RBF-FD in a distributed environment requires three
 design decisions \cite{Saad2003}. First, the problem is partitioned in some fashion to distribute work across multiple processes. Intelligent partitioning
