--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -50,14 +50,14 @@
 \include{related_work}
 \include{rbffd_method}
 \include{ordering_and_preconditioning}
-%\include{distributed_solver}
+\include{distributed_solver}
 
-%\include{ViennaCL.tex}
-%\include{future_of_gpus.tex}
+\include{ViennaCL.tex}
+\include{future_of_gpus.tex}
 
-%\include{explicit_pde_solutions}
+\include{explicit_pde_solutions}
 %\include{implicit_pde_solutions}
-%\include{performance_analysis} 
+\include{performance_analysis} 
 %\include{publications}
 
 %\include{conclusions}
