--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-02 18:01:11 -0500 
+%% Created for Evan Bollig at 2013-09-03 13:16:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Stocco1995,
+	Author = {Stocco, L. and Schrack, G.},
+	Booktitle = {Communications, Computers, and Signal Processing, 1995. Proceedings., IEEE Pacific Rim Conference on},
+	Date-Added = {2013-09-03 18:16:21 +0000},
+	Date-Modified = {2013-09-03 18:16:27 +0000},
+	Doi = {10.1109/PACRIM.1995.519560},
+	Keywords = {image processing;octrees;quadtrees;contraction;display devices;integer dilation;lookup tables;mapping systems;memory consumption;octrees;quadtrees;tabular methods;Contracts;Displays;Graphics;Interleaved codes;Table lookup},
+	Pages = {426-428},
+	Title = {Integer dilation and contraction for quadtrees and octrees},
+	Year = {1995},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/PACRIM.1995.519560}}
 
 @misc{MSIItasca,
 	Date-Added = {2013-09-02 22:59:23 +0000},
